# dserver-signed-url-plugin

./: .gitignore  CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: test.yml
dserver_signed_url_plugin/: __init__.py  config.py  schemas.py  sql_models.py
tests/: conftest.py  test_read_routes.py  test_unit.py  test_upload_routes.py  test_url_rewriting.py
