[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dserver-signed-url-plugin"
description = "dserver plugin for generating signed URLs for dataset access"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    {name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de"},
]
dynamic = ["version"]
dependencies = [
    "dtoolcore>=3.18.0",
    "dtool-s3",
    "dservercore>0.18.0",
    "flask-smorest",
    "marshmallow",
]

[project.optional-dependencies]
test = [
    "dservercore",
    "pytest",
    "pytest-cov",
]
azure = [
    "dtool-azure",
]

[project.urls]
Repository = "https://github.com/livMatS/dserver-signed-url-plugin"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "dserver_signed_url_plugin/version.py"

[tool.setuptools]
packages = ["dserver_signed_url_plugin"]

[project.entry-points."dservercore.extension"]
"SignedURLExtension" = "dserver_signed_url_plugin:SignedURLExtension"
